Fix services alerts not showing at all

--- a/static/css/style-munstrap.css
+++ b/static/css/style-munstrap.css
@@ -6,3 +6,7 @@ img.i {
   display: block;
   margin: 10px auto;
 }
+
+div.service-alert{
+  margin-top: 10px;
+}
